@@ -8,17 +8,17 @@ AUX easytag-2.1.8-werror.patch 547 SHA256 730ca3145805f2588ccddc45a15eca89bf8cf0
 DIST easytag-2.1.8.tar.xz 2459496 SHA256 1a2f75c9a70aeb7a404dfaa96e0df0eaaa325df301c58f0f708d0da4c08e65a9 SHA512 cf5d92902276b8d462c695aaa0d1072684d60cbfc45d07fb2ac7b345907a775b94665612088b33f3272db22d4b4eb78f4a4e36f2caf6e151a08f640841208e48 WHIRLPOOL ab37d4942bde4a88c233869b3cf84d13dd4a259cd894941bd9c26ec4f3b22c02af3fc7633a09670ee707d0287bb8bb9fc654ea00e0fe694319a6cf24b220420c
 DIST easytag-2.2.2.tar.xz 973116 SHA256 fb21ac51975c90c58c5dc38c28aa1030d6fa3420bc6b8406f085e34df9e14164 SHA512 1b49fdb080ad59f08c956e63fb0a286a2785e6c4483b2b4003e1b217ad1537999d76dcaedbe4a59782514b655ee53bac8b6907eff246c00bc1a578b2be674010 WHIRLPOOL 270403fe0573b80e93b4084a2089c1492253e1a678fd4b9aceba9ae78a0f590d9d905ddb9fa002d73870bdda47817b652bb29bacb21f2ac951f63063eca5c16b
 EBUILD easytag-2.1.8.ebuild 1559 SHA256 e93f33403930b47682eaa23630cb03e57cd728acb527a91e619d3bf2d18934ef SHA512 08f6ba5c341dfd8492a29483f2b6354863c1cc026c60397391440573dd09df3f8cd52b9644fc37a06f42e8ed777298f80a04caad3141fc6537e45784421001ad WHIRLPOOL 34390b65f711e4c3a39f042fff79cd11fed6e2f0f8844c2e60cbe714b1501c20fe53ce2c82bace04c5b65b9916a5ee5e7902fe7b086fa62f703137b44efbb6d6
-EBUILD easytag-2.2.2.ebuild 2141 SHA256 268a33db0162f7ce0cd58a698c301175f352d4a28b9d5d3596d7b7e1e73e68c9 SHA512 47a9f369ec4eac34495bc5918a574545665d939905874bd292680e867a8a8dddc5c175f9e4ee087af7f129c71f444b4c4623fc0a71482f6f265da81cdaf56738 WHIRLPOOL 5d4fde93d15c1a477f686daa807a5796483eee17484b8df193e9dc1abf17305329e04305f5a9ab6c729dd2c6380dcc4237345008bc4c1ff2711d1a27c42ba8a7
-MISC ChangeLog 28466 SHA256 88f39669d4c419912c67dd3c04aef8307d1d26c86c8a4a3aa25b46097db1e676 SHA512 be2751f493a78a614e035d6e45969a188e6c3efc3d9fee88a8cc955ac01290376112e0d9cf1b3d9d6a480833de688f55ca9c82b54f8bba921c6fc5edac02a291 WHIRLPOOL 0d302fc371e59c01188d92e6ea17de65b68e9174c3687db0eebd8136ba0194698f400eb8b05d18c084c08971df0b43b119faae2d605321abbfe7e1b59a484c95
+EBUILD easytag-2.2.2.ebuild 2141 SHA256 e56aea37dcb817b2bef43836ae5da3fe11e7c80b6d5f03eb0c009397c7c372e7 SHA512 bc00ba76c58f316081b9202161638329c638e293e9b2f3d1d27b26cf33d605ed48dabc33be070939b4201d239f20ded332d39013a5a12d41f95e29c1d50a9c15 WHIRLPOOL da15a94b19fe42ee47655d79e9cf08a912576576cfe490c810374e80b8a48ead469255d01e4dc40abcc49c7e664dc8db0d06b83a95d2c257d4792aa52470061d
+MISC ChangeLog 28576 SHA256 e74e0617fb361b9d36b9b86375dc5024b816f08f486d59576253615fe676a3c8 SHA512 2da2a6002f335c45cffa9a5525ef813d023c29e0c5d8fb41de12f8efb2474a21f59adc8e2ebefab87efeec0be958e4aba9db99dc6d4c3a753578d2cca3eae18d WHIRLPOOL eacd1bd8281effc0791fb4642d1828c0a4608656db57a881cbc4d8008ca77152715af5ddd3af47d7791d236ff778eed5a4eaf250d0f026767a0a33ac58f1f963
 MISC metadata.xml 471 SHA256 0df2e2c65ee794eeba10fb8e909b11b12c32700cfb33ec06b660a1ea31ea1e77 SHA512 067bb8c4c94821be15ad8ad1d12538d1da0d4c898782a36ddaf6826be3e639472d3e1b388d64540789636389910ffbdc9d804b8e8a76c16a3265c27b697306ae WHIRLPOOL b75aa9d571ad50f4377b2a04d651a69541e9731d1718c02e6baa6c547e5a9423df052c6e156522ad53f9863bc97238e05311ea257f2540bc8c6afbb91142a5ed
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTbSm9AAoJEEdUh39IaPFN13kIAJxB6vgUFtC4W44bbEsksDzB
-plrB+PIxw4eOtFgl89Bv3Gn41aXVqZ8421nagemtI/80vbS7KHgJDyG6Vp/BTHmT
-kORskKq7RbbufO9eoapF2wDcqNKOgrzFeTXLXU1pklqfXbYtHgxU4jzpSUMRqUNo
-OOpECo95oqGzkhyjv77Nk9aKkUfsbtyB89Xd42y2WwgueHU2j9ptRIzjeFD18RsZ
-umfNqRM613GPbTOpT44zS9iKV8U2VWr0trxGdB0pkeLExX+eMWiTUIbOtYj6sPpa
-ulYHkNKXH+7D7AVeY1ra1UsjcLkENUY1oveS/Uw11AqRNptkPabXX96ww8GUjy4=
-=/oQY
+iQEcBAEBCAAGBQJTbSpyAAoJEEdUh39IaPFNOXUIAIJ7UH+EcVRQmE2F7FjPw35u
+FduxSyn5A/xd9Jk8MmjfgRfb795CVrDdWeENM646lMPOlY9OjC3V08dw8li4n3Vr
+Q9a8v8XTUje6xbQxsQRkIo9GgcuNvqYnyHgXAk1fgamjOxDnK78kbntjVR98V81L
+Jje8FJRzVpMqd8Rd8YBSypIzo4Db022PkvyrCZfTclGdf/ZcqPwjFJ/oK/PGAQg8
+IB4eBU1i9E1rBtvttWf0qlB3iJKXRry46L9sltZ3hzyK/0dN1ZvkSZqsb0shJoW7
+AArXoYjIsk5DOemGpc0ImRCHTe5gZCk37cGaYnWyvK/bDtQ6k4XcO66jAoUnCl4=
+=3gS5
 -----END PGP SIGNATURE-----
