@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/easytag
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/easytag/ChangeLog,v 1.191 2014/05/09 19:18:19 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/easytag/ChangeLog,v 1.192 2014/05/09 19:21:20 ssuominen Exp $
+
+  09 May 2014; Samuli Suominen <ssuominen@gentoo.org> easytag-2.2.2.ebuild:
+  Reposition DOCS in the ebuild.
 
   09 May 2014; Samuli Suominen <ssuominen@gentoo.org> -easytag-2.1.10-r1.ebuild,
   -easytag-2.1.7-r2.ebuild, -easytag-2.1.9-r2.ebuild, -easytag-2.2.0-r1.ebuild,
